--- a/pretty.css
+++ b/pretty.css
@@ -5,7 +5,7 @@ body{
     background-image: url("./art/background.png");
     color: #363636;
     font-family: petscop;
-    font-size: larger;
+    font-size: large;
      }
 
 
