--- a/pretty.css
+++ b/pretty.css
@@ -24,11 +24,19 @@ img {
 }
 
 /* not used yet. shhhh */
-nav.navbar { 
+.nav { 
   background-color: #ebebeb; 
   border-radius: 0;
   border: none; 
-  max-height: 50px; 
+  max-height: 50px;
+  margin: auto;
+  padding: 0;
+}
+
+a.navlink {
+  font-size: xx-large;
+  color: #afafaf;
+  margin:auto;
 }
 
 
