--- a/pretty.css
+++ b/pretty.css
@@ -33,6 +33,16 @@ img {
   padding: 0;
 }
 
+.navlink {
+  font-size: xx-large;
+  color: #ebebeb;
+  margin:auto;
+}
+
+.navlink:hover {
+  color: #676767;
+}
+
 a.navlink {
   font-size: xx-large;
   color: #afafaf;
