--- a/new/new.css
+++ b/new/new.css
@@ -7,6 +7,7 @@ body
     display: flex;
 	justify-content: center;
 	align-items: center;
+    background-color:#696969;
 }
 
 
@@ -20,5 +21,11 @@ body
 .side
 {
     max-width: 300px;
+    background-color:#ebebeb;
+}
 
+img.icon
+{
+    max-width:50%;
+    width:256px;
 }
