--- a/css.css
+++ b/css.css
@@ -6,7 +6,7 @@ body
     font-size: x-large;
 	justify-content: center;
 	align-items: center;
-    background-size: cover;
+    background-size: fill;
     background-image: url("./art/background.png");
 }
 
